--- a/auth_gestion_usuarios/src/main/resources/application.yaml
+++ b/auth_gestion_usuarios/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     password: ${DB_PASSWORD}
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
